--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/header.css"/>
+    <link rel="stylesheet" href="../css/body.css"/>
+    <script src="../scripts/index.js"></script>
 </head>
 <body>
 <div id="header" class="header">
@@ -21,6 +23,13 @@
 
         </ul>
 </div>
-<p style="color: aliceblue">dhdhdh</p>
+<div id="main_body">
+    <div id="slide">
+        <!--<button class="left" onclick="slider.left();"></button>-->
+        <div id="slider"></div>
+        <!--<button class="right" onclick="slider.right();"></button>-->
+    </div>
+</div>
+
 </body>
 </html>
