added headline, games catalog, footer

--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,81 @@
 <body>
 <div id="header" class="header">
 
-        <ul>
-            <img class="logo" src="../accets/images/logo.png">
-            <li onclick="alert('MAIN')">MAIN</li>
-            <img class="red_line" src="../accets/images/red_line.png">
-            <li>NEW GAMES</li>
-            <img class="red_line" src="../accets/images/red_line.png">
-            <li>F.A.Q</li>
-            <img class="red_line" src="../accets/images/red_line.png">
-            <img class="card" src="../accets/images/card.png">
-            <li>CARD</li>
+    <ul>
+        <img class="logo" src="../accets/images/logo.png">
+        <li onclick="alert('MAIN')">MAIN</li>
+        <img class="red_line" src="../accets/images/red_line.png">
+        <li>NEW GAMES</li>
+        <img class="red_line" src="../accets/images/red_line.png">
+        <li>F.A.Q</li>
+        <img class="red_line" src="../accets/images/red_line.png">
+        <img class="card" src="../accets/images/card.png">
+        <li>CARD</li>
 
-        </ul>
+    </ul>
 </div>
 <div id="main_body">
     <div id="slide">
-        <!--<button class="left" onclick="slider.left();"></button>-->
+        <div class="left" onclick="slider.left();"></div>
         <div id="slider"></div>
-        <!--<button class="right" onclick="slider.right();"></button>-->
+        <div class="right" onclick="slider.right();"></div>
+    </div>
+    <div id="topics">
+        <p class="headline"><span class="text_red">BEST</span> GAMES</p>
+    </div>
+    <div id="best_games_section">
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/01.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/02.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/03.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/04.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/05.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
+        <div class="best_games_catalog"><img class="img_best_games" src="../accets/best_games_catalog/06.png">
+            <div class="best_games_text">
+                <p>info</p>
+                <img src="../accets/images/red_line.png">
+                <p>buy</p>
+            </div>
+        </div>
     </div>
 </div>
+<div class="footer">
+    <div class="info">
+        <p>2018</p>
+        <img src="../accets/images/white_line.png">
+        <p><span class="text_red">MADE BY</span> Pr1awrence</p>
+    </div>
+</div>
+
 
 </body>
 </html>
