added games body, video review and vision of elements

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 
     <ul>
         <img class="logo" src="../accets/images/logo.png">
-        <li onclick="alert('MAIN')">MAIN</li>
+        <li onclick="showAnotherBody('main_body')">MAIN</li>
         <img class="red_line" src="../accets/images/red_line.png">
-        <li>NEW GAMES</li>
+        <li onclick="showAnotherBody('games_body')">GAMES</li>
         <img class="red_line" src="../accets/images/red_line.png">
         <li>F.A.Q</li>
         <img class="red_line" src="../accets/images/red_line.png">
@@ -73,6 +73,177 @@
                 <p>info</p>
                 <img src="../accets/images/red_line.png">
                 <p>buy</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="games_body" style="display: none">
+    <p class="headline"><span class="text_red">ALL</span> GAMES</p>
+    <div id="games_section">
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/1.png">
+            <div class="games_text">
+                <p class="games_text_headline">Dragon Age: Inquisition</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price" style="display: none">$59.99</p>
+                <p class="games_text_price_no_sale">$19.99</p>
+                <p class="games_text_discount" style="display: none">33% off</p>
+                <p class="games_text_description_no_sale">Action RPG from BioWare</p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/2.png">
+            <div class="games_text">
+                <p class="games_text_headline">Fallout 76</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$59.99</p>
+                <p class="games_text_price">$40.19</p>
+                <p class="games_text_discount">33% off</p>
+                <p class="games_text_description">Action RPG from Bethesda
+                    Game Studios</p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/3.png">
+            <div class="games_text">
+                <p class="games_text_headline">Kingdom Come: Deliverance</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$59.99</p>
+                <p class="games_text_price">$35.99</p>
+                <p class="games_text_discount">40% off</p>
+                <p class="games_text_description">Action RPG from Warhorse
+                    Studios</p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/4.png">
+            <div class="games_text">
+                <p class="games_text_headline">Minecraft</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price" style="display: none">$59.99</p>
+                <p class="games_text_price_no_sale">$29.99</p>
+                <p class="games_text_discount" style="display: none">33% off</p>
+                <p class="games_text_description_no_sale">Sandbox, survival from
+                    Mojang</p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/5.png">
+            <div class="games_text">
+                <p class="games_text_headline">Grand Theft Auto V</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$29.99</p>
+                <p class="games_text_price">$22.49</p>
+                <p class="games_text_discount">25% off</p>
+                <p class="games_text_description">Action & Adventure from
+                    Rockstar Games
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/6.png">
+            <div class="games_text">
+                <p class="games_text_headline">Diablo® III</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$19.99</p>
+                <p class="games_text_price">$9.99</p>
+                <p class="games_text_discount">50% off</p>
+                <p class="games_text_description">Action RPG from Blizzard
+                    Entertainment
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/7.png">
+            <div class="games_text">
+                <p class="games_text_headline">Destiny 2: Forsaken</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$39.99</p>
+                <p class="games_text_price">$29.99</p>
+                <p class="games_text_discount">25% off</p>
+                <p class="games_text_description">Action Shooter from Blizzard
+                    Entertainment
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/8.png">
+            <div class="games_text">
+                <p class="games_text_headline">South Park: The Fractured
+                    But Whole</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price" style="display: none">$59.99</p>
+                <p class="games_text_price_no_sale">$59.99</p>
+                <p class="games_text_discount" style="display: none">33% off</p>
+                <p class="games_text_description_no_sale">Role-playing from Ubisoft</p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/9.png">
+            <div class="games_text">
+                <p class="games_text_headline">Assassin's Creed® Origins</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$59.99</p>
+                <p class="games_text_price">$24.00</p>
+                <p class="games_text_discount">60% off</p>
+                <p class="games_text_description">Action & Adventure from
+                    Ubisoft
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/10.png">
+            <div class="games_text">
+                <p class="games_text_headline">No Man's Sky</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$49.99</p>
+                <p class="games_text_price">$44.99</p>
+                <p class="games_text_discount">10% off</p>
+                <p class="games_text_description">Action & Adventure from
+                    Hello Games
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/11.png">
+            <div class="games_text">
+                <p class="games_text_headline">The Elder Scrolls V: Skyrim</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$39.99</p>
+                <p class="games_text_price">$23.99</p>
+                <p class="games_text_discount">40% off</p>
+                <p class="games_text_description">Action RPG from Bethesda
+                    Game Studios
+                </p>
+            </div>
+        </div>
+        <div class="games_catalog"><img class="img_all_games" src="../accets/all_games_catalog/12.png">
+            <div class="games_text">
+                <p class="games_text_headline">FINAL FANTASY XV
+                    ROYAL EDITION</p>
+                <img class="price_line" src="../accets/images/red_line_price.png">
+                <p class="games_text_old_price">$49.99</p>
+                <p class="games_text_price">$29.99</p>
+                <p class="games_text_discount">40% off</p>
+                <p class="games_text_description">Role-playing from Square Enix
+                </p>
+            </div>
+        </div>
+    </div>
+    <p class="headline"><span class="text_red">VIDEO</span> REVIEW</p>
+    <div id="video_review">
+        <div class="block_video_review">
+            <iframe class="video" width="749" height="421" src="https://www.youtube.com/embed/mIAZReKCosc"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+                    picture-in-picture" allowfullscreen></iframe>
+            <div class="block_video_text">
+                <p class="headline_video"><span class="text_yellow">Fallout 76</span> Review</p>
+                <img class="video_description_line" src="../accets/images/red_line_gorizont.png">
+                <p class="video_description">Fallout 76 Reviewed by Brandin Tyrrel
+                    on PC, Xbox One X, and PlayStation 4 Pro.
+                    Fallout 76: Review In Progress Update 2 ...</p>
+            </div>
+        </div>
+        <div class="block_video_review">
+            <iframe class="video" width="749" height="421" src="https://www.youtube.com/embed/tCp21u6Fxjs"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+                    picture-in-picture" allowfullscreen></iframe>
+            <div class="block_video_text">
+                <p class="headline_video"><span class="text_yellow">Dragon Age: Inquisition
+                </span> Review</p>
+                <img class="video_description_line" src="../accets/images/red_line_gorizont.png">
+                <p class="video_description">With the entertaining and thematically rich
+                    Inquisition, the Dragon Age series returns to
+                    its former glory. Read Kevin's in-depth ...</p>
             </div>
         </div>
     </div>
