work with search tool

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <img class="red_line" src="../accets/images/red_line.png">
         <li onclick="showAnotherBody('games_body')">GAMES</li>
         <img class="red_line" src="../accets/images/red_line.png">
-        <li>F.A.Q</li>
+        <li onclick="showAnotherBody('faq_body')">F.A.Q</li>
         <img class="red_line" src="../accets/images/red_line.png">
         <img class="card" src="../accets/images/card.png">
         <li>CARD</li>
@@ -247,6 +247,34 @@
             </div>
         </div>
     </div>
+</div>
+<div id="faq_body" style="display: none">
+    <p class="headline"><span class="text_red"></span>F.A.Q</p>
+    <div id="form">
+        <input type="search"
+               class="place_for_search" id="myInput" value="" placeholder="Enter text..." autofocus>
+        <button id="button_search" type="submit" value=" " onclick="myFunction()">
+            <div id="button_search_items"><img id="img_search" src="../accets/faq/search.png">Search</div>
+        </button>
+    </div>
+<div id="faq_questions" class="faq_questions_block">
+    <img class="line_question" src="../accets/faq/line_question.png">
+    <div class="question"><a href="#">How to buy a game at a discount?</a></div>
+    <div class="answer"><a href="#">All current discounts are listed on the main site. If you want to buy the game at a discount, add
+        the desired game to the basket and pay for it.</a></div>
+
+    <ul id="myUL">
+        <li><a href="#">Adele</a></li>
+        <li><a href="#">Agnes</a></li>
+
+        <li><a href="#">Billy</a></li>
+        <li><a href="#">Bob</a></li>
+
+        <li><a href="#">Calvin</a></li>
+        <li><a href="#">12</a></li>
+        <li><a href="#">Cindy</a></li>
+    </ul>
+</div>
 </div>
 <div class="footer">
     <div class="info">
