--- a/src/index.html
+++ b/src/index.html
@@ -251,30 +251,20 @@
 <div id="faq_body" style="display: none">
     <p class="headline"><span class="text_red"></span>F.A.Q</p>
     <div id="form">
-        <input type="search"
-               class="place_for_search" id="myInput" value="" placeholder="Enter text..." autofocus>
+        <input type="text" class="place_for_search" id="myInput" value="" placeholder="Enter text..." autofocus>
+
+        <button id="button_for_turn_back" value=" " title="Cancel search" onclick="turnBack()">
+           <img id="img_close" src="../accets/images/close.png">
+        </button>
+
         <button id="button_search" type="submit" value=" " onclick="myFunction()">
             <div id="button_search_items"><img id="img_search" src="../accets/faq/search.png">Search</div>
         </button>
     </div>
-<div id="faq_questions" class="faq_questions_block">
-    <img class="line_question" src="../accets/faq/line_question.png">
-    <div class="question"><a href="#">How to buy a game at a discount?</a></div>
-    <div class="answer"><a href="#">All current discounts are listed on the main site. If you want to buy the game at a discount, add
-        the desired game to the basket and pay for it.</a></div>
+    <div id="faq_questions" class="faq_questions_block">
+        <img class="line_question" src="../accets/faq/line_question.png">
 
-    <ul id="myUL">
-        <li><a href="#">Adele</a></li>
-        <li><a href="#">Agnes</a></li>
-
-        <li><a href="#">Billy</a></li>
-        <li><a href="#">Bob</a></li>
-
-        <li><a href="#">Calvin</a></li>
-        <li><a href="#">12</a></li>
-        <li><a href="#">Cindy</a></li>
-    </ul>
-</div>
+    </div>
 </div>
 <div class="footer">
     <div class="info">
