Create object Game, resize image in "games", create a visualizer. Refactor block in html to js (main and games).

--- a/html/example.html
+++ b/html/example.html
@@ -26,6 +26,7 @@
 
 
             let element = document.createElement('h2');
+	    element.wer = array[i];
             let element2 = document.createElement('img');
             element.innerHTML = 'Hello world';
             element2.src = "../accets/faq/line_question.png";
